gear/RaceYourselfGear/css/raceyourself.css
.center-container {
	display: table;	
	width: 100%;
	height: 100%;
}
.center {
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}

.noautooverflow {
	overflow: initial;
}

.gps-screen {
	padding: 50px;
	color: white;
	font-size: x-large;
}

.fill {
	width: 100%;
	height: 100%;
}

*.unselectable {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.splash {
	text-align: center;
	margin-top: 50px;
}

.ui-header .ui-title {
	color: #3db44a;	
}

.race-green {
	color: #3db44a;	
}

.footer {	
	position: fixed;
	left: 0px;
	bottom: 0px;
	width: 100%;
	height: 70px;
}

.footer-gray {
	background-color: #1f1f1f;	
	font-size: 15px;
}

.footer p {
	font-size: 25px;
	margin: 20px;
}

.menu-item {
	width: 140px;;
	height: 150px;
	line-height: 150px;
	display: block;
	float: left;
	text-align: center;
	font-size: 24px;
}

.menu-item img {
	vertical-align: middle;
	margin-bottom: 15px;
}

.menu-label {
	position: relative;
	top: -35px;
	line-height: normal;
}

.menu {
	padding: 0px 10px;
}

.text-center {
	text-align: center;
}

img {
	-webkit-user-drag: none;
}

.locked-game {
}

.locked-img {
	display: none;
}

.locked-game .unlocked-img {
	display: none;
}
.locked-game .locked-img {
	display: inline;
}

#lockedgame-content {
	font-size: 20px;
}

.hidden {
	display: none;
}

.race-btn {
	display: block;
	border: 2px solid white;
	margin: 10px;
}

#race-canvas {
	width: 100%;
	height: 100%;
	padding: 10px;
}

.stat {
	width: 100%;
	height: 33%;
	padding: 15px 0px;
}

.stat-label {
	margin-left: 50px;
	width: 65px;
	height: 65px;
	text-align: center;
	line-height: 65px;
	float: left;
	vertical-align: middle;
}

.stat-label img {
	vertical-align: middle;
	display: inline-block;
}

.stat-value {
	font-size: 60px;
	margin-left: 25px;
	float: left;
}

.stat-sub {
	font-size: 50%;
	margin-left: 145px;
	line-height: 0%;
	clear: both;
}

#summary {
	text-align: center;
}

.summary-label {
	font-size: 38px;
}

.summary-value {
	font-size: 20px;
}


#error-page {
	background-color: red;
	color: white;	
	text-align: center;
}

#closing {
	background-color: white;
	color: black;
	text-align: center;	
}

.flick-right {
	border-right: 5px solid #3f3f3f;
}

.flick-left {
	border-left: 5px solid #3f3f3f;
}

.flick-up {
	border-up: 5px solid #3f3f3f;
}

.flick-down {
	border-bottom: 5px solid #3f3f3f;
}

#race-game .ui-content {
	padding: 0 0;
	margin: 0 0;
}

.setter {
	font-size: 4rem;
	text-align: center;
	padding: 25px 0px;
}
.setter-btn {
	width: 20%;
	float: left;
}
.setter-value {
	width: 60%;	
	float: left;
	line-height: 75%;
}
.setter-ok {
	padding-top: 15px;
	text-align: center;
	float: clear;
}
.setter-units {
	font-size: 30%;
}

.ry-title {
	text-align: center;
	padding: 25px 0px;
}

#newgames .ui-content {
	padding: 0 0;
	margin: 0 0;
}

#achievement-description {
	padding-bottom: 30px;
}

#achievement-awarded, #achievement-progress {
	font-size: 50%;
	padding-bottom: 10px;
}

.new-achievement {
	min-height: 100px;
}

.centeredImage
    {
    text-align:center;
    margin-top:85px;
    margin-bottom:0px;
    padding:0px;
    }

#debug-log {
	font-size: 15px;
}

#error-message {
	font-size: 15px;
	text-align: center;
}

